--- a/src/style.css
+++ b/src/style.css
@@ -56,7 +56,7 @@
   top: 100px;
   left: 660px;
 
-  background-image: url(img/cold.png);
+  background-image: url(./img/cold.png);
   background-size: 100px 50px;
   background-position-x: 80px;
 }
@@ -87,7 +87,7 @@
   top: -40px;
   left: 750px;
 
-  background-image: url(img/clown.png);
+  background-image: url(./img/clown.png);
   background-size: 100px 50px;
   background-position-x: 80px;
 }
