--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@
   width: 50px;
   height: 50px;
   
-  background-image: url(src/guy.png);
+  background-image: url(img/guy.png);
   background-size: 100px 50px;
   background-position-x: 80px;
 
