Cleanup before section

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,7 @@
   width: 50px;
   height: 50px;
   
-  background-image: url(/public/assets/dino.png);
+  background-image: url(/assets/dino.png);
   background-size: 50px 50px;
 
   position: relative;
@@ -63,7 +63,7 @@
   width: 75px;
   height: 75px;
 
-  background-image: url(/public/assets/cactus.png);
+  background-image: url(/assets/cactus.png);
   background-size: 75px 75px;
 
 
@@ -100,7 +100,7 @@
   top: -40px;
   left: 750px;
 
-  background-image: url(/public/assets/bird.png);
+  background-image: url(/assets/bird.png);
   background-size: 50px 50px;
   
 }
